<resources>
  <string name="app_name">Relevant</string>
  <string name="base_url">https://api.nytimes.com/</string>
  <string name="error_message">Unable to retrieve APOD for selected date.</string>
  <string name="title_image">Image</string>
  <string name="title_history">History</string>
  <string name="image_info">Info</string>
  <string name="calendar">Pick date</string>
  <string name="context_delete">Delete</string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="url_label">URL:</string>
  <string name="hd_url_label">HD URL:</string>
  <string name="positive_label">OK</string>

  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="nav_header_title">Relevant</string>
  <string name="nav_header_subtitle">android.studio@android.com</string>
  <string name="nav_header_desc">Navigation header</string>
  <string name="action_settings">Settings</string>
  <string name="login_failure_message">Unable to Sign In with Provided Credentials</string>
</resources>
